--- a/readme
+++ b/readme
@@ -1,23 +1,23 @@
-# 🤖 Telegram Bot — Habr & Cybersecurity News Parser
+
 
 Автоматический бот, который парсит интересные статьи с Habr и публикует их в Telegram-канале.
 Подходит для новостных каналов, обучающих проектов и персональных блогов.
 
-## 🔥 Возможности
+ Возможности
 - Парсинг разделов **Информационная безопасность** и **Программирование**
 - Выбор случайной статьи для публикации
 - Красивое Telegram-превью (картинки, описание, заголовок)
 - Автоматические посты по расписанию (cron-аналог)
 - Возможность ручной отправки команды `/article`
 
-## 🛠 Технологии
+Технологии
 - Python 3.10+
 - Telebot (pyTelegramBotAPI)
 - BeautifulSoup4
 - Requests
 - Threading (планировщик публикаций)
 
-## 📦 Установка
+Установка
 
 ```bash
 git clone https://github.com/NorthB1T/Bot_parser.git
